--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "cl_project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://swaybs.github.io/cl-react/",
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "contentful": "^7.1.0",
+    "deploy": "^1.0.3",
+    "gh-pages": "^2.0.1",
     "google-maps-react": "^2.0.2",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.2",
@@ -18,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
