--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "jquery": "^3.3.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-burger-menu": "^2.6.3",
     "react-dom": "^16.7.0",
     "react-open-weather-map": "^2.3.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "request": "^2.88.0",
+    "soundcloud": "^3.3.1",
+    "swapi-node": "^0.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
